--- a/TP BDD TEST.ipynb
+++ b/TP BDD TEST.ipynb
@@ -92,7 +92,7 @@
     "## executer une simple requete pour se debuter \n",
     "cette entrées montre l'execution d'une reqeutte select appliquée a la table employees du shcema de la bdd hr montrée ci-dessous ,  a travere un curseur\n",
     "\n",
-    "![chema](./images/hr.png \"schema\")\n",
+    "![chema](https://raw.githubusercontent.com/abdelghanimeliani/cx_oracle-examples/master/images/hr.png?token=GHSAT0AAAAAABQADLGYCVNXTZYMTKKN7SVOYVBLF4Q )\n",
     "\n",
     "\n",
     "la requette est terminée avec succes sauf qu'elle n'affiche rien jusqu'a present "
