--- a/TP BDD TEST.ipynb
+++ b/TP BDD TEST.ipynb
@@ -741,7 +741,7 @@
     "\n",
     "|execution de la fonction|\n",
     "|:------------:|\n",
-    "![schema](images/pl_sql_fuction.PNG)|\n"
+    "![schema](https://raw.githubusercontent.com/abdelghanimeliani/cx_oracle-examples/master/images/pl_sql_fuction.PNG?token=GHSAT0AAAAAABQADLGZATYHBTICGSTHGA4YYVBLIVA)|\n"
    ]
   },
   {
@@ -785,7 +785,7 @@
     "\n",
     "|execution de la fonction|\n",
     "|:------------:|\n",
-    "![schema](images/pl_sql_procedure.PNG)|"
+    "![schema](https://raw.githubusercontent.com/abdelghanimeliani/cx_oracle-examples/master/images/pl_sql_procedure.PNG?token=GHSAT0AAAAAABQADLGYY7SKWZHC3J5SWESSYVBLJAA)|"
    ]
   },
   {
