--- a/TP BDD TEST.ipynb
+++ b/TP BDD TEST.ipynb
@@ -92,7 +92,7 @@
     "## executer une simple requete pour se debuter \n",
     "cette entrées montre l'execution d'une reqeutte select appliquée a la table employees du shcema de la bdd hr montrée ci-dessous ,  a travere un curseur\n",
     "\n",
-    "![chema](https://raw.githubusercontent.com/abdelghanimeliani/cx_oracle-examples/master/images/hr.png?token=GHSAT0AAAAAABQADLGYCVNXTZYMTKKN7SVOYVBLF4Q )\n",
+    "![schema](https://raw.githubusercontent.com/abdelghanimeliani/cx_oracle-examples/master/images/hr.png?token=GHSAT0AAAAAABQADLGZDYEQU2P3QWVCVU2MYVB7DIQ)\n",
     "\n",
     "\n",
     "la requette est terminée avec succes sauf qu'elle n'affiche rien jusqu'a present "
@@ -741,7 +741,7 @@
     "\n",
     "|execution de la fonction|\n",
     "|:------------:|\n",
-    "![schema](https://raw.githubusercontent.com/abdelghanimeliani/cx_oracle-examples/master/images/pl_sql_fuction.PNG?token=GHSAT0AAAAAABQADLGZATYHBTICGSTHGA4YYVBLIVA)|\n"
+    "![function](https://raw.githubusercontent.com/abdelghanimeliani/cx_oracle-examples/master/images/pl_sql_fuction.PNG?token=GHSAT0AAAAAABQADLGYL3HDZDXCKFZAZMKCYVB7C2Q)|\n"
    ]
   },
   {
@@ -785,7 +785,7 @@
     "\n",
     "|execution de la fonction|\n",
     "|:------------:|\n",
-    "![schema](https://raw.githubusercontent.com/abdelghanimeliani/cx_oracle-examples/master/images/pl_sql_procedure.PNG?token=GHSAT0AAAAAABQADLGYY7SKWZHC3J5SWESSYVBLJAA)|"
+    "![procedure](https://raw.githubusercontent.com/abdelghanimeliani/cx_oracle-examples/master/images/pl_sql_procedure.PNG?token=GHSAT0AAAAAABQADLGYD5GCDSSAQHPCMEZ4YVB7CKA)|"
    ]
   },
   {
@@ -811,12 +811,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6448be5",
+   "metadata": {},
+   "source": [
+    "plot graphs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d8205e04",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " import matplotlib\n",
+    " from matplotlib import pyplot as plot\n",
+    "\n",
+    " query = \"\"\"select  as \"Size Factor\",\n",
+    "            estd_physical_reads as \"Physical Reads\"\n",
+    "            from v$db_cache_advice\n",
+    "            where block_size = 8192\n",
+    "           order by size_factor\"\"\"\n",
+    " \n",
+    "\n",
+    " cur.execute(query)\n",
+    " column_names = cursor.description\n",
+    " \n",
+    " x_data = []\n",
+    " y_data = []\n",
+    " \n",
+    " for row in cursor.fetchall():\n",
+    "   x_data.append(row[0])\n",
+    "   y_data.append(row[1])\n",
+    " \n",
+    " figure = plot.figure()\n",
+    " axis = figure.add_subplot(111)\n",
+    " axis.plot(x_data, y_data, '-')\n",
+    " \n",
+    " plot.xlabel(column_names[0][0])\n",
+    " plot.ylabel(column_names[1][0])\n",
+    " \n",
+    " plot.show()"
+   ]
   },
   {
    "cell_type": "code",
