--- a/TP BDD TEST.ipynb
+++ b/TP BDD TEST.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "source": [
     "## initialisation d'oracle client \n",
-    "il faut telecharger instant client depuis le cite d'oracle avant  , extraire les fichiers dans C:\\oracle\\instantclient_21_3\n",
+    "il faut telecharger instant client depuis le site d'oracle avant  , extraire les fichiers dans C:\\oracle\\instantclient_21_3\n",
     "avant d'executer cette entrée"
    ]
   },
@@ -484,7 +484,7 @@
    "id": "65f4c63a",
    "metadata": {},
    "source": [
-    "### en utilisant la methode fetchone()"
+    "### en utilisant la methode fetmany()"
    ]
   },
   {
@@ -647,9 +647,12 @@
     "\n",
     "\n",
     "\n",
-    "rows = [ (1, \"First\" ), (2, \"Second\" ),\n",
-    "         (3, \"Third\" ), (4, \"Fourth\" ),\n",
-    "         (5, \"Fifth\" ), (6, \"Sixth\" ),\n",
+    "rows = [ (1, \"First\" ),\n",
+    "         (2, \"Second\" ),\n",
+    "         (3, \"Third\" ),\n",
+    "          (4, \"Fourth\" ),\n",
+    "         (5, \"Fifth\" ),\n",
+    "          (6, \"Sixth\" ),\n",
     "         (7, \"Seventh\" ) ]\n",
     "\n",
     "cur.executemany(\"insert into mytab(id, data) values (:1, :2)\", rows)\n",
@@ -824,36 +827,7 @@
    "id": "d8205e04",
    "metadata": {},
    "outputs": [],
-   "source": [
-    " import matplotlib\n",
-    " from matplotlib import pyplot as plot\n",
-    "\n",
-    " query = \"\"\"select  as \"Size Factor\",\n",
-    "            estd_physical_reads as \"Physical Reads\"\n",
-    "            from v$db_cache_advice\n",
-    "            where block_size = 8192\n",
-    "           order by size_factor\"\"\"\n",
-    " \n",
-    "\n",
-    " cur.execute(query)\n",
-    " column_names = cursor.description\n",
-    " \n",
-    " x_data = []\n",
-    " y_data = []\n",
-    " \n",
-    " for row in cursor.fetchall():\n",
-    "   x_data.append(row[0])\n",
-    "   y_data.append(row[1])\n",
-    " \n",
-    " figure = plot.figure()\n",
-    " axis = figure.add_subplot(111)\n",
-    " axis.plot(x_data, y_data, '-')\n",
-    " \n",
-    " plot.xlabel(column_names[0][0])\n",
-    " plot.ylabel(column_names[1][0])\n",
-    " \n",
-    " plot.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
